--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -1,43 +1,48 @@
-
 /* Add your profile image here */
-.Photo{
-    background-image: url('https://images.pexels.com/photos/3799821/pexels-photo-3799821.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+.Photo {
+  background-image: url("\IMG_1411.JPG");
 }
 /* Projects Photo */
-.project1{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+one');
-    cursor: none;    
+.project1 {
+  background-image: url("\recipe app screenshot.PNG");
+  cursor: none;
+  border-radius: 15px;
 }
-.project2{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+two');
-    cursor: none;
+.project2 {
+  background-image: url("\password-generator screenshot.PNG");
+  cursor: none;
+  border-radius: 15px;
 }
-.project3{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+three');
-    cursor: none;
+.project3 {
+  background-image: url("\weather app screenshot.PNG");
+  cursor: none;
+  border-radius: 15px;
 }
-.project4{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+four');
-    cursor: none;
+.project4 {
+  background-image: url("\Screenshot (1).png");
+  cursor: none;
+  border-radius: 15px;
 }
-.project5{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+five');
-    cursor: none;
+.project5 {
+  background-image: url("\jordan memory screenshot.PNG");
+  cursor: none;
+  border-radius: 15px;
 }
-.project6{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+six');
-    cursor: none;
+.project6 {
+  background-image: url("outkast screenshot.PNG");
+  cursor: none;
+  border-radius: 15px;
 }
 /* Miscelaneous Activities photo */
-.misc1{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Miscellaneous+one');
-    cursor: none;
+.misc1 {
+  background-image: url("https://via.placeholder.com/400x600.png?text=Miscellaneous+one");
+  cursor: none;
 }
-.misc2{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Miscellaneous+two');
-    cursor: none;
+.misc2 {
+  background-image: url("https://via.placeholder.com/400x600.png?text=Miscellaneous+two");
+  cursor: none;
 }
-.misc3{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Miscellaneous+three');
-    cursor: none;
+.misc3 {
+  background-image: url("https://via.placeholder.com/400x600.png?text=Miscellaneous+three");
+  cursor: none;
 }
